--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,46 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pixateka"
         tools:targetApi="31">
+
         <activity
-            android:name=".activities.MainActivity"
+            android:theme="@style/Splash"
+            android:name=".activities.StartActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+        </activity>
+
+        <activity
+            android:theme="@style/Theme.Pixateka"
+            android:name="ru.senya.pixateka.activities.MainActivity"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <activity
+            android:theme="@style/Theme.Pixateka"
+            android:name=".activities.RegistrationActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:theme="@style/Theme.Pixateka"
+            android:name=".activities.EnterActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+
     </application>
 
 </manifest>
