--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,32 +14,36 @@
         android:theme="@style/Theme.Pixateka"
         tools:targetApi="31">
 
+
         <activity
             android:name=".activities.StartActivity"
             android:exported="true"
             android:theme="@style/Splash">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
-            android:name="ru.senya.pixateka.activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Pixateka">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-
         <activity
             android:name=".activities.RegistrationActivity"
             android:exported="false"
             android:theme="@style/Theme.Pixateka">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activities.SecondActivity"
+            android:exported="true"
+            android:label="@string/title_activity_second">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -52,16 +56,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-        <activity
-            android:name=".activities.ActivityProfile"
-            android:exported="false"
-            android:theme="@style/Theme.Pixateka">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-
 
     </application>
 
