--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     namespace 'ru.senya.pixateka'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "ru.senya.pixateka"
@@ -33,6 +33,12 @@ android {
 
 dependencies {
 
+
+
+
+    implementation 'androidx.room:room-common:2.5.0'
+    implementation 'androidx.room:room-runtime:2.5.0'
+    annotationProcessor 'androidx.room:room-compiler:2.5.0'
 
     implementation 'androidx.cardview:cardview:1.0.0'
 
