--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,7 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pixateka"
         tools:targetApi="31">
-
 
         <activity
             android:name=".activities.StartActivity"
@@ -40,14 +41,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity
-            android:name=".activities.SecondActivity"
-            android:exported="true"
-            android:label="@string/title_activity_second">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+
         <activity
             android:name=".activities.EnterActivity"
             android:exported="false"
