--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
     <application
@@ -24,6 +24,7 @@
             android:name=".activities.StartActivity"
             android:exported="true"
             android:theme="@style/Splash">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -55,9 +56,25 @@
                 android:value="" />
         </activity>
 
-        <activity android:name=".activities.AddActivity"
+        <activity
+            android:name=".activities.AddActivity"
             android:exported="false"
-            android:theme="@style/Theme.Pixateka"/>
+            android:theme="@style/Theme.Pixateka" />
+
+        <activity
+            android:name=".activities.DeepLinkActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Pixateka">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="example.com"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
 
 
     </application>
