--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,11 @@ dependencies {
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
+
+    // Network
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+    implementation "com.android.volley:volley:$volley_version"
+
 }
