--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,12 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 
     <application
+        android:usesCleartextTraffic="true"
+
         android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -24,11 +27,11 @@
             android:name=".activities.StartActivity"
             android:exported="true"
             android:theme="@style/Splash">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".activities.MainActivity"
@@ -61,21 +64,13 @@
             android:exported="false"
             android:theme="@style/Theme.Pixateka" />
 
+
         <activity
-            android:name=".activities.DeepLinkActivity"
-            android:exported="true"
+            android:name=".activities.TestActivity"
+            android:exported="false"
             android:theme="@style/Theme.Pixateka">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
-                    android:host="example.com"
-                    android:scheme="https" />
-            </intent-filter>
         </activity>
-
 
     </application>
 
