--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "ru.senya.pixateka"
-        minSdk 28
+        minSdk 29
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -74,5 +74,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation "com.android.volley:volley:$volley_version"
+
+
+    implementation 'com.github.stfalcon-studio:StfalconImageViewer:v1.0.1'
 
 }
