--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     implementation "com.android.volley:volley:$volley_version"
+
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
 }
