--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
-        android:requestLegacyExternalStorage="true"
         android:name=".App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -17,28 +15,33 @@
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pixateka"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
-
+        tools:targetApi="31" >
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/Theme.Pixateka.NoActionBar" />
         <activity
             android:name=".activities.StartActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Splash">
+            android:theme="@style/Splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Pixateka">
+            android:theme="@style/Theme.Pixateka" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -47,44 +50,36 @@
             android:name=".activities.RegistrationActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Pixateka">
+            android:theme="@style/Theme.Pixateka" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".activities.LoginActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Pixateka">
+            android:theme="@style/Theme.Pixateka" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".activities.AddActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Pixateka" />
-
-
         <activity
             android:name=".activities.TestActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Pixateka">
-
+            android:theme="@style/Theme.Pixateka" >
         </activity>
-
         <activity
             android:name=".activities.ProfileActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Pixateka" />
-
-
     </application>
 
 </manifest>
