я продолжаю переписывать проект. тут сделана авторизация, пагинация и загрузка фотографий.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,6 +97,9 @@
         <activity
             android:name=".activities.SubSampActivity"
             android:exported="true" />
+
+        <activity android:name=".activities.FullscreenViewActivity"
+            android:exported="true"/>
     </application>
 
 
